--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "sensio/framework-extra-bundle": "2.0.*",
         "sensio/distribution-bundle": "2.0.*",
         "jms/security-extra-bundle": "1.0.*",        
-        "alphalemon/alphalemon-cms-bundle": "dev-feat-decouple-themes-and-blocks"
+        "alphalemon/alphalemon-cms-bundle": "dev-develop"
     },
 
     "autoload": {
