--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,3 @@
-# Internal routing configuration to handle ESI
-#_internal:
-#   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
-#   prefix:   /_internal
+_AlphaLemonBootstrapBundle:
+    resource: .
+    type: bootstrap
