added installer routes to routing.yml

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,2 @@
-_AlphaLemonBootstrapBundle:
-    resource: .
-    type: bootstrap
+_installer:
+    resource: "@AlphaLemonCmsInstallerBundle/Resources/config/routing.yml"
