--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,2 +1,4 @@
-_installer:
-    resource: "@AlphaLemonCmsInstallerBundle/Resources/config/routing.yml"
+# Internal routing configuration to handle ESI
+#_internal:
+#    resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
+#    prefix:   /_internal
