--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,15 @@
 {
-    "name": "symfony/framework-standard-edition",
-    "description": "The \"Symfony Standard Edition\" distribution",
+    "name": "alphalemon/alphalemon-cms-sandbox",
+    "description": "The \"AlphaLemon CMS Sandbox\" distribution",
     "autoload": {
         "psr-0": { "": "src/" }
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "http://apps.alphalemon.com/"
+        }
+    ],
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "2.1.*",
@@ -17,7 +23,9 @@
         "sensio/framework-extra-bundle": "dev-master",
         "sensio/generator-bundle": "dev-master",
         "jms/security-extra-bundle": "1.2.*",
-        "jms/di-extra-bundle": "1.1.*"
+        "jms/di-extra-bundle": "1.1.*",
+        "alphalemon/alphalemon-cms-bundle": "dev-master",
+        "alphalemon/alphalemon-cms-installer-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
