--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
   - "mysql -e 'create database alphalemon_test;'"
   - wget http://getcomposer.org/composer.phar
   - php composer.phar install
-  - php app/console alphalemon:install-cms
+  - php app/console alphalemon:install-cms --company=Acme --bundle=WebSiteBundle --dsn="mysql:host=localhost;port=3306;dbname=alphalemon_test" --user=root --password= --no-interaction
 
 script: phpunit -c app
 
