--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
         {
             "type": "composer",
             "url": "http://apps.alphalemon.com/"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/alphalemon/common"
         }
     ],
     "require": {
@@ -25,7 +29,8 @@
         "jms/security-extra-bundle": "1.2.*",
         "jms/di-extra-bundle": "1.1.*",
         "alphalemon/alphalemon-cms-bundle": "dev-master",
-        "alphalemon/alphalemon-cms-installer-bundle": "dev-master"
+        "alphalemon/alphalemon-cms-installer-bundle": "dev-master",        
+        "doctrine/common": "dev-bugfix as 2.3.0"
     },
     "scripts": {
         "post-install-cmd": [
