--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
         "sensio/generator-bundle": "2.1.*",
         "jms/security-extra-bundle": "1.2.*",
         "jms/di-extra-bundle": "1.1.*",
-        "alphalemon/alphalemon-cms-bundle": "dev-master",
-        "alphalemon/alphalemon-cms-installer-bundle": "dev-master",        
+        "alphalemon/alphalemon-cms-bundle": "1.0.*",
+        "alphalemon/alphalemon-cms-installer-bundle": "1.0.*",        
         "doctrine/common": "dev-bugfix as 2.3.0"
     },
     "scripts": {
