Added database support to avoid install errors

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ php:
 #  - SYMFONY_VERSION=origin/master
 
 before_script:
+  - mysql -e 'create database alphalemon_test;'
   - wget http://getcomposer.org/composer.phar
   - php composer.phar install --dev
   - php app/console alphalemon:install-cms --company=Acme --bundle=WebSiteBundle --dsn="mysql:host=localhost;port=3306;dbname=alphalemon_test" --user=root --password= --no-interaction
