--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
     },
     "require-dev": {    
       "willdurand/propel-typehintable-behavior": "dev-master",  
-      "mikey179/vfsStream": "1.1.0"
+      "mikey179/vfsStream": "1.1.0", 
+      "alphalemon/app-sunshine-theme-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
