--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ php:
 before_script:
   - mysql -e 'create database alphalemon_test;'
   - wget http://getcomposer.org/composer.phar
+  - php composer.phar install
   - php composer.phar update --dev
   - php app/console alphalemon:install-cms --company=Acme --bundle=WebSiteBundle --dsn="mysql:host=localhost;port=3306;dbname=alphalemon_test" --user=root --password= --no-interaction
 
