--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "kriswallsmith/assetic": "1.1.*@dev",
         "alphalemon/alphalemon-cms-bundle": "dev-master",
         "alphalemon/alphalemon-cms-installer-bundle": "dev-master",
-    	"alphalemon/bootbusiness-theme-bundle": "dev-master",
+    	"alphalemon/bootbusiness-theme-bundle": "dev-master"
     },
     "require-dev": {    
       "willdurand/propel-typehintable-behavior": "dev-master",  
