--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
-        "alphalemon/alphalemon-cms-bundle": "2.3.*",
+        "alphalemon/alphalemon-cms-bundle": "dev-master",
         "alphalemon/alphalemon-cms-installer-bundle": "dev-master",
     	"alphalemon/bootbusiness-theme-bundle": "dev-master",
 	"alphalemon/app-tinymce-block-bundle": "dev-master"
