--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
-        "alphalemon/alphalemon-cms-bundle": "dev-master",
-        "alphalemon/alphalemon-cms-installer-bundle": "dev-master",
+        "alphalemon/alphalemon-cms-bundle": "v1.1.0-RC4",
+        "alphalemon/alphalemon-cms-installer-bundle": "1.1.*",
     	"alphalemon/bootbusiness-theme-bundle": "dev-master",
 	"alphalemon/app-tinymce-block-bundle": "dev-master"
     },
