--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,16 @@
     "autoload": {
         "psr-0": { "": "src/" }
     },
+    "authors": [
+      {
+        "name": "RedKite Labs",
+        "email": "info@redkite-labs.com"
+      }
+    ],
     "repositories": [
         {
             "type": "composer",
-            "url": "http://apps.alphalemon.com/"
+            "url": "http://apps.redkite-labs.com/"
         }
     ],
     "require": {
@@ -23,15 +29,15 @@
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
-        "alphalemon/alphalemon-cms-bundle": "v1.1.0-RC4",
-        "alphalemon/alphalemon-cms-installer-bundle": "1.1.*",
-    	"alphalemon/bootbusiness-theme-bundle": "dev-master",
-	"alphalemon/app-tinymce-block-bundle": "dev-master"
+        "redkite-cms/redkite-cms-bundle": "dev-master",
+        "redkite-cms/installer-bundle": "dev-master",
+    	"redkite-labs/bootbusiness-theme-bundle": "dev-master",
+	"redkite-cms/tinymce-block-bundle": "dev-master"
     },
     "require-dev": {    
       "willdurand/propel-typehintable-behavior": "dev-master",  
       "mikey179/vfsStream": "1.1.0", 
-      "alphalemon/app-sunshine-theme-bundle": "dev-master"
+      "redkite-cms/sunshine-theme-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
