added the kernel_root_dir param to twig configuration, required to render a file handled by the FileBundle app-block

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,6 +25,8 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
+    globals:
+      kernel_root_dir: %kernel.root_dir%
 
 # Assetic Configuration
 assetic:
