--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,16 @@ php:
   - 5.3
   - 5.4
 
-#env:
-#  - SYMFONY_VERSION=v2.0.15
-#  - SYMFONY_VERSION=origin/2.0
-#  - SYMFONY_VERSION=origin/master
+-- env:
+--  - DB=mysql
+--  - DB=pgsql
+--  - DB=sqlite
 
 before_script:
-  - mysql -e 'create database alphalemon_test;'
+  - mysql -e 'create database redkite_test;'
   - wget http://getcomposer.org/composer.phar
   - php composer.phar install --dev
-  - php app/console redkitecms:install --env=rkcms_dev --driver=sqlite --host=localhost --database=::memory: --no-interaction
+  - php app/console redkitecms:install --env=rkcms_dev --driver=sqlite --host=localhost --database=redkite_test --no-interaction
 
 script: phpunit -c app
 
