--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,18 @@ php:
   - 5.4
 
 env:
- - DB=mysql
+ #- DB=mysql
  - DB=pgsql
- - DB=sqlite
+ #- DB=sqlite
 
 before_script:
   - wget http://getcomposer.org/composer.phar
   - php composer.phar install --dev
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'create database redkite_test;'; fi"
-  - psql -c 'create database redkite_test;' -U postgres
+  - sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'create database redkite_test;' -U postgres; fi"
   - sh -c "if [ '$DB' = 'sqlite' ]; then php app/console redkitecms:install --driver=sqlite --host=localhost --database=redkite_test --no-interaction; fi"
   - sh -c "if [ '$DB' = 'mysql' ]; then php app/console redkitecms:install --driver=mysql --host=localhost --port=3306 --database=redkite_test --user=root --password= --no-interaction; fi"
-  - sh -c "if [ '$DB' = 'pgsql' ]; then php app/console redkitecms:install --driver=pgsql --host=localhost --port=5432 --database=redkite_test --user=postgres --password= --no-interaction; fi"
+  - sh -c "if [ '$DB' = 'pgsql' ]; then php app/console redkitecms:install --driver=pgsql --host=localhost --port=5432 --database=redkite_test --user=postgres --no-interaction; fi"
 
 script: phpunit -c app
 
