--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ php:
   - 5.4
 
 env:
- #- DB=mysql
- - DB=pgsql
- #- DB=sqlite
+ - DB=mysql
+ #- DB=pgsql
+ - DB=sqlite
 
 before_script:
   - wget http://getcomposer.org/composer.phar
@@ -16,7 +16,7 @@ before_script:
   - sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'create database redkite_test;' -U postgres; fi"
   - sh -c "if [ '$DB' = 'sqlite' ]; then php app/console redkitecms:install --driver=sqlite --host=localhost --database=redkite_test --no-interaction; fi"
   - sh -c "if [ '$DB' = 'mysql' ]; then php app/console redkitecms:install --driver=mysql --host=localhost --port=3306 --database=redkite_test --user=root --password= --no-interaction; fi"
-  - sh -c "if [ '$DB' = 'pgsql' ]; then php app/console redkitecms:install --driver=pgsql --host=localhost --port=5432 --database=redkite_test --user=postgres --no-interaction; fi"
+  - sh -c "if [ '$DB' = 'pgsql' ]; then php app/console redkitecms:install --driver=pgsql --host=localhost --port=5432 --database=redkite_test --user=postgres --password= --no-interaction; fi"
 
 script: phpunit -c app
 
