switched to RedKite CMS master branch

--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,8 @@
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
-        "redkite-cms/redkite-cms-bundle": "1.1.0-beta1",
-        "redkite-cms/installer-bundle": "1.1.0-beta1",
+        "redkite-cms/redkite-cms-bundle": "dev-master",
+        "redkite-cms/installer-bundle": "dev-master",
     	"redkite-labs/bootbusiness-theme-bundle": "dev-master",
         "redkite-cms/redkite-cms-base-blocks": "dev-master",
 	    "redkite-cms/tinymce-block-bundle": "dev-master"
