--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'create database redkite_test;'; fi"
   - sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'create database redkite_test;' -U postgres; fi"
   - sh -c "if [ '$DB' = 'sqlite' ]; then php app/console redkitecms:install --driver=sqlite --host=localhost --database=redkite --no-interaction; fi"
-  - sh -c "if [ '$DB' = 'mysql' ]; then php app/console redkitecms:install --driver=mysql --host=localhost --port=3306 --database=redkite --user=root --password= --no-interaction; fi"
+  - sh -c "if [ '$DB' = 'mysql' ]; then php app/console redkitecms:install --driver=mysql --host=localhost --port=3306 --database=redkite --user=travis --password= --no-interaction; fi"
   - sh -c "if [ '$DB' = 'pgsql' ]; then php app/console redkitecms:install --driver=pgsql --host=localhost --port=5432 --database=redkite --user=postgres --password= --no-interaction; fi"
   - sh -c "php app/console propel:sql:insert --force --env=rkcms_test"
 
