--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ env:
  - DB=sqlite
 
 before_script:
-  - wget http://getcomposer.org/composer.phar
-  - php composer.phar install --dev --prefer-dist
+  #- wget http://getcomposer.org/composer.phar
+  #- php composer.phar install --dev
+  - composer install
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'create database redkite_test;'; fi"
   - sh -c "if [ '$DB' = 'pgsql' ]; then psql -c 'create database redkite_test;' -U postgres; fi"
   - sh -c "if [ '$DB' = 'sqlite' ]; then php app/console redkitecms:configure --driver=sqlite --host=localhost --database=redkite --website-url=http://example.com/ --no-interaction; fi"
@@ -24,4 +25,4 @@ script: phpunit -c app
 
 notifications:
   email:
-    - info@alphalemon.com
+    - info@redkite-labs.com
