--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
   - sh -c "if [ '$DB' = 'mysql' ]; then php app/console redkitecms:configure --driver=mysql --host=localhost --port=3306 --database=redkite --user=travis --password= --website-url=http://example.com/ --no-interaction; fi"
   - sh -c "if [ '$DB' = 'pgsql' ]; then php app/console redkitecms:configure --driver=pgsql --host=localhost --port=5432 --database=redkite --user=postgres --password= --website-url=http://example.com/ --no-interaction; fi"
   - sh -c "php app/console propel:sql:insert --force --env=rkcms_test"
-  - php app/console redkitecms:install --env=rmcms
+  - php app/console redkitecms:install --env=rkcms
 
 script: phpunit -c app
 
