--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ before_script:
   - sh -c "if [ '$DB' = 'sqlite' ]; then php app/console redkitecms:configure --driver=sqlite --host=localhost --database=redkite --website-url=http://example.com/ --no-interaction; fi"
   - sh -c "if [ '$DB' = 'mysql' ]; then php app/console redkitecms:configure --driver=mysql --host=localhost --port=3306 --database=redkite --user=root --password= --website-url=http://example.com/ --no-interaction; fi"
   - sh -c "if [ '$DB' = 'pgsql' ]; then php app/console redkitecms:configure --driver=pgsql --host=localhost --port=5432 --database=redkite --user=postgres --password= --website-url=http://example.com/ --no-interaction; fi"
-  - sh -c "php app/console propel:sql:insert --force --env=rkcms"
-  - php app/console redkitecms:install --env=rkcms
+  #- sh -c "php app/console propel:sql:insert --force --env=rkcms"
+  - php app/console redkitecms:install --env=rkcms_test
 
 script: phpunit -c app
 
