--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,11 @@
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
-        "redkite-cms/redkite-cms-bundle": "dev-master",
-        "redkite-cms/installer-bundle": "dev-master",
-    	"redkite-labs/bootbusiness-theme-bundle": "dev-master",
-        "redkite-cms/redkite-cms-base-blocks": "dev-master",
-	    "redkite-cms/tinymce-block-bundle": "dev-master"
+        "redkite-cms/redkite-cms-bundle": "1.1.*",
+        "redkite-cms/installer-bundle": "1.1.*",
+    	"redkite-labs/bootbusiness-theme-bundle": "1.1.*",
+        "redkite-cms/redkite-cms-base-blocks": "1.1.*",
+	    "redkite-cms/tinymce-block-bundle": "1.1.*"
     },
     "require-dev": {    
       "willdurand/propel-typehintable-behavior": "dev-master",  
@@ -57,7 +57,6 @@
     "config": {
         "bin-dir": "bin"
     },
-    "minimum-stability": "dev",
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web"
