--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "redkite-labs/redkite-cms-sandbox",
-    "description": "The \"AlphaLemon CMS Sandbox\" distribution",
+    "description": "The \"RedKite CMS Sandbox\" distribution",
+    "license": "MIT",
     "autoload": {
         "psr-0": { "": "src/" }
     },
@@ -18,7 +19,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.3.6",
+        "symfony/symfony": "2.3.*",
         "doctrine/orm": ">=2.2.3,<2.4-dev",
         "doctrine/doctrine-bundle": "1.2.*",
         "twig/extensions": "1.0.*",
