--- a/composer.json
+++ b/composer.json
@@ -31,15 +31,15 @@
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
         "redkite-cms/redkite-cms-bundle": "dev-master",
-        "redkite-cms/installer-bundle": "dev-master",
+        "redkite-cms/installer-bundle": "dev-master", 
+        "redkite-labs/modern-business-theme-bundle": "dev-master",
     	"redkite-labs/bootbusiness-theme-bundle": "dev-master",
         "redkite-cms/redkite-cms-base-blocks": "dev-master",
 	    "redkite-cms/tinymce-block-bundle": "dev-master"
     },
     "require-dev": {    
       "willdurand/propel-typehintable-behavior": "dev-master",  
-      "mikey179/vfsStream": "1.1.0", 
-      "redkite-labs/sunshine-theme-bundle": "dev-master"
+      "mikey179/vfsStream": "1.1.0"
     },
     "scripts": {
         "post-install-cmd": [
